--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.paulpanther.embeddedliveprogramming
-pluginName = embedded-live-programming
+pluginGroup = com.paulmethfessel.embeddedliveprogramming
+pluginName = Embedded Live Programming
 pluginRepositoryUrl = https://github.com/Paulpanther/embedded-live-programming
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
@@ -11,7 +11,7 @@ pluginSinceBuild = 213
 pluginUntilBuild = 223.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
+platformType = CL
 platformVersion = 2021.3.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
