--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,11 +9,13 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.elp.ProbeService" />
+        <projectService serviceImplementation="com.elp.ExampleService" />
         <statusBarWidgetFactory implementation="com.elp.ui.HITLWidgetFactory" />
         <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.ProbeInlayProvider" />
         <fileDocumentManagerListener implementation="com.elp.events.FileChangeListener" />
         <intentionAction>
             <className>com.elp.actions.ReplacementAction</className>
         </intentionAction>
+        <toolWindow factoryClass="com.elp.ui.ExampleToolWindowFactory" id="Examples" anchor="bottom" canCloseContents="true"/>
     </extensions>
 </idea-plugin>
