--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,13 +12,14 @@
         <projectService serviceImplementation="com.elp.services.ExampleService" />
         <projectService serviceImplementation="com.elp.services.ClassService" />
         <statusBarWidgetFactory implementation="com.elp.ui.HITLWidgetFactory" />
-        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.ProbeInlayProvider" />
-        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.ReplacementInlayProvider" />
+        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.editor.ProbeInlayProvider" />
+        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.editor.ReplacementInlayProvider" />
         <fileDocumentManagerListener implementation="com.elp.events.FileChangeListener" />
         <intentionAction>
             <className>com.elp.actions.ReplacementAction</className>
         </intentionAction>
         <toolWindow factoryClass="com.elp.ui.toolWindow.ExampleToolWindowFactory" id="Examples" anchor="bottom" canCloseContents="true"/>
         <notificationGroup id="Embedded Live Programming Notification Group" displayType="BALLOON" />
+        <lang.foldingBuilder implementationClass="com.elp.ui.editor.ReplacementFoldingBuilder" language="ObjectiveC" />
     </extensions>
 </idea-plugin>
