--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,20 +8,48 @@
     <depends>com.intellij.cidr.lang</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.elp.services.ProbeService" />
-        <projectService serviceImplementation="com.elp.services.ExampleService" />
-        <projectService serviceImplementation="com.elp.services.ClassService" />
-        <statusBarWidgetFactory implementation="com.elp.ui.HITLWidgetFactory" />
-<!--        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.editor.ProbeInlayProvider" />-->
-        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.editor.ReplacementInlayProvider" />
-        <fileDocumentManagerListener implementation="com.elp.events.FileChangeListener" />
-        <intentionAction><className>com.elp.actions.CreateReplacementAction</className></intentionAction>
-        <intentionAction><className>com.elp.actions.CreateOrOpenExampleAction</className></intentionAction>
-        <intentionAction><className>com.elp.actions.JumpToSourceAction</className></intentionAction>
-<!--        <psi.referenceContributor language="ObjectiveC" implementation="com.elp.actions.ReplacementReferenceContributor" />-->
-        <completion.contributor order="first, before clangd" language="ObjectiveC" implementationClass="com.elp.actions.ReplacementCompletionContributor" />
-        <toolWindow factoryClass="com.elp.ui.toolWindow.ExampleToolWindowFactory" id="Examples" anchor="bottom" canCloseContents="true"/>
-        <notificationGroup id="Embedded Live Programming Notification Group" displayType="BALLOON" />
-        <lang.foldingBuilder implementationClass="com.elp.ui.editor.ReplacementFoldingBuilder" language="ObjectiveC" />
+        <applicationService
+                serviceImplementation="com.elp.services.ProbeService"/>
+        <projectService
+                serviceImplementation="com.elp.services.ExampleService"/>
+        <projectService
+                serviceImplementation="com.elp.services.ClassService"/>
+        <statusBarWidgetFactory
+                implementation="com.elp.ui.HITLWidgetFactory"/>
+        <!--        <codeInsight.inlayProvider language="ObjectiveC" implementationClass="com.elp.ui.editor.ProbeInlayProvider" />-->
+        <codeInsight.inlayProvider
+                language="ObjectiveC"
+                implementationClass="com.elp.ui.editor.ReplacementInlayProvider"/>
+        <fileDocumentManagerListener
+                implementation="com.elp.events.FileChangeListener"/>
+        <intentionAction>
+            <className>com.elp.actions.CreateReplacementAction</className>
+        </intentionAction>
+        <intentionAction>
+            <className>com.elp.actions.CreateOrOpenExampleAction</className>
+        </intentionAction>
+        <intentionAction>
+            <className>com.elp.actions.JumpToSourceAction</className>
+        </intentionAction>
+        <psi.referenceContributor
+                order="first"
+                language="JAVA"
+                implementation="com.elp.ext.ReplacementReferenceContributor"/>
+        <completion.contributor
+                order="first, before clangd"
+                language="ObjectiveC"
+                implementationClass="com.elp.ext.ReplacementCompletionContributor"/>
+        <toolWindow
+                factoryClass="com.elp.ui.toolWindow.ExampleToolWindowFactory"
+                id="Examples"
+                anchor="bottom"
+                canCloseContents="true"/>
+        <notificationGroup
+                id="Embedded Live Programming Notification Group"
+                displayType="BALLOON"/>
+        <lang.foldingBuilder
+                implementationClass="com.elp.ui.editor.ReplacementFoldingBuilder"
+                language="ObjectiveC"/>
+        <psi.implicitReferenceProvider implementation="com.elp.ext.ReplacementImplicitReferenceProvider" />
     </extensions>
 </idea-plugin>
