Fix Probes and constructor replacements

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -17,6 +17,9 @@
         <codeInsight.inlayProvider
                 language="ObjectiveC"
                 implementationClass="com.elp.editor.ReplacementInlayProvider"/>
+        <codeInsight.inlayProvider
+                language="ObjectiveC"
+                implementationClass="com.elp.editor.ProbeInlayProvider"/>
         <fileDocumentManagerListener
                 implementation="com.elp.events.FileChangeListener"/>
         <intentionAction>
