--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -59,7 +59,7 @@
                 implementationClass="com.elp.editor.NamespaceFoldingBuilder"
                 language="ObjectiveC"/>
         <psi.implicitReferenceProvider implementation="com.elp.editor.ReplacementImplicitReferenceProvider" />
-        <annotator language="ObjectiveC" implementationClass="com.elp.editor.ExampleAnnotator" />
+<!--        <annotator language="ObjectiveC" implementationClass="com.elp.editor.ExampleAnnotator" />-->
         <codeInsight.lineMarkerProvider language="ObjectiveC" implementationClass="com.elp.editor.ExampleLineMarkerProvider" />
         <codeInsight.lineMarkerProvider language="ObjectiveC" implementationClass="com.elp.editor.ReplacementLineMarkerProvider" />
         <annotator language="ObjectiveC" implementationClass="com.elp.editor.ProbeAnnotator" />
