--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,13 +5,7 @@ version: 2
 updates:
   # Maintain dependencies for Gradle dependencies
   - package-ecosystem: "gradle"
-    directory: "/"
-    target-branch: "next"
-    schedule:
-      interval: "daily"
-  # Maintain dependencies for GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+    directory: "/plugin"
     target-branch: "next"
     schedule:
       interval: "daily"
